# cw

./: .gitignore  CMakeLists.txt  FasterBoxCounter.cpp  FasterBoxCounter.h  MultifractalFormalism.cpp  MultifractalFormalism.h  README.md  main.cpp
